RESOLVED FIXED281291
[WPE] flaky crash with ASSERTION FAILED: currentTime.isValid() for test media/media-source/media-detachablemse-append.html
https://bugs.webkit.org/show_bug.cgi?id=281291
Summary [WPE] flaky crash with ASSERTION FAILED: currentTime.isValid() for test media...
zsun
Reported 2024-10-11 02:31:21 PDT
STDERR: ASSERTION FAILED: currentTime.isValid() STDERR: /app/webkit/Source/WebCore/Modules/mediasource/ManagedMediaSource.cpp(119) : virtual void WebCore::ManagedMediaSource::monitorSourceBuffers() STDERR: 1 0x7fcc45b45d5c WebCore::ManagedMediaSource::monitorSourceBuffers() STDERR: 2 0x7fcc46948857 WebCore::HTMLMediaElement::playbackProgressTimerFired() STDERR: 3 0x7fcc470de9fb WebCore::ThreadTimers::sharedTimerFiredInternal() STDERR: 4 0x7fcc4428df45 WTF::RunLoop::TimerBase::TimerBase(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&)::{lambda(void*)#1}::_FUN(void*) STDERR: 5 0x7fcc4428e98f WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) STDERR: 6 0x7fcc3cfbfd36 g_main_context_dispatch STDERR: 7 0x7fcc3d01d2b8 g_main_context_iterate.isra.0 STDERR: 8 0x7fcc3cfbf3ff g_main_loop_run STDERR: 9 0x7fcc4428eb78 WTF::RunLoop::run() STDERR: 10 0x7fcc4247cc3f int WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) STDERR: 11 0x7fcc3c7cc08a __libc_start_call_main STDERR: 12 0x7fcc3c7cc14b __libc_start_main STDERR: 13 0x55d281d217e5 _start STDERR: WPEWebProcess terminated (pid 49) for reason: crash
Attachments
zsun
Comment 2 2024-10-23 01:55:51 PDT
EWS
Comment 3 2024-10-24 07:34:27 PDT
Committed 285648@main (770fbed05b83): <https://commits.webkit.org/285648@main> Reviewed commits have been landed. Closing PR #35611 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.