Cherry-pick 285648@main (770fbed05b83). https://bugs.webkit.org/show_bug.cgi?id=281291

Return MediaTime::zeroTime() when m_mediaTimeDuration is invalid at MediaPlayerPrivateGStreamerMSE::duration().
    https://bugs.webkit.org/show_bug.cgi?id=281291

    Reviewed by Alicia Boya Garcia.

    Bug 280337 added an assertion on validation check for currentTime in
    ManageMediaSource::monitorSourceBuffers(). During currentTime
    calculation, we call MediaPlayerPrivateGStreamerMSE::duration() to work out the
    playbackpostion for the MSE case. The initial m_mediaTimeDuration is NaN. The creation
    of a element has its currentTime attribute set to MediaTime::zeroTime() though.
    This causes the assertion failure when ManageMediaSource is enabled.
    Affected test is  media/media-source/media-detachablemse-append.html.

    * Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:
    (WebCore::MediaPlayerPrivateGStreamerMSE::duration const):

    Canonical link: https://commits.webkit.org/285648@main

Canonical link: https://commits.webkit.org/282416.256@webkitglib/2.46